--- a/views/accountTitles/accountTitleCategory/form.ejs
+++ b/views/accountTitles/accountTitleCategory/form.ejs
@@ -1,37 +1,52 @@
 <div class="card">
-    <div class="card-header card-header-primary card-header-text">
-        <div class="card-text">
-            <h4 class="card-title">基本設定</h4>
-        </div>
-    </div>
-
     <div class="card-body">
-        <div class="form-group bmd-form-group">
-            <label for="codeValue" class="bmd-label-static">
-                コード<span class="text-danger">＊</span>
-            </label>
-            <input class="form-control" name="codeValue" id="codeValue" placeholder="" maxlength=64
-                value="<%= forms.codeValue %>" <% if (!isNew) { %> readonly <% } %>>
-            <span class="bmd-help">半角64文字以内でご入力ください</span>
-            <% if (errors && errors['codeValue']) { %>
-            <p class="error message text-danger">
-                <%- errors['codeValue'].msg %>
-            </p>
-            <% } %>
+        <ul class="nav nav-pills nav-pills-primary" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" data-toggle="tab" href="#link1" role="tablist">
+                    基本設定
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#link2" role="tablist">
+                    追加特性
+                </a>
+            </li>
+        </ul>
+
+        <div class="tab-content">
+            <div class="tab-pane active show" id="link1">
+                <div class="form-group bmd-form-group">
+                    <label for="codeValue" class="bmd-label-static">
+                        コード<span class="text-danger">＊</span>
+                    </label>
+                    <input class="form-control" name="codeValue" id="codeValue" placeholder="" maxlength=64
+                        value="<%= forms.codeValue %>" <% if (!isNew) { %> readonly <% } %>>
+                    <span class="bmd-help">半角64文字以内でご入力ください</span>
+                    <% if (errors && errors['codeValue']) { %>
+                    <p class="error message text-danger">
+                        <%- errors['codeValue'].msg %>
+                    </p>
+                    <% } %>
+                </div>
+
+                <div class="form-group bmd-form-group">
+                    <label for="name" class="bmd-label-static">
+                        名称<span class="text-danger">＊</span>
+                    </label>
+                    <input class="form-control" name="name" id="name" placeholder="" maxlength=64
+                        value="<%= forms.name %>">
+                    <span class="bmd-help">64文字以内でご入力ください</span>
+                    <% if (errors && errors['name']) { %>
+                    <p class="error message text-danger">
+                        <%- errors['name'].msg %>
+                    </p>
+                    <% } %>
+                </div>
+            </div>
+            <div class="tab-pane" id="link2">
+            </div>
         </div>
 
-        <div class="form-group bmd-form-group">
-            <label for="name" class="bmd-label-static">
-                名称<span class="text-danger">＊</span>
-            </label>
-            <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="<%= forms.name %>">
-            <span class="bmd-help">64文字以内でご入力ください</span>
-            <% if (errors && errors['name']) { %>
-            <p class="error message text-danger">
-                <%- errors['name'].msg %>
-            </p>
-            <% } %>
-        </div>
     </div>
 </div>
 <!-- end card -->
