--- a/views/places/screeningRoom/form.ejs
+++ b/views/places/screeningRoom/form.ejs
@@ -1,144 +1,147 @@
 <div class="card">
-    <div class="card-header card-header-primary card-header-text">
-        <div class="card-text">
-            <h4 class="card-title">基本設定</h4>
-        </div>
-    </div>
-
     <div class="card-body">
-        <div class="form-group bmd-form-group">
-            <label for="containedInPlace[branchCode]" class="bmd-label-static">
-                劇場
-            </label>
-            <% if (isNew) { %>
-            <select class="form-control" name="containedInPlace[branchCode]">
-                <option value="">選択してください</option>
-                <% for (const movieTheater of movieTheaters) { %>
-                <option value="<%= movieTheater.branchCode %>">
-                    <%= movieTheater.name.ja %>
-                </option>
-                <% } %>
-            </select>
-            <% } else { %>
-            <select class="form-control" disabled>
-                <% for (const movieTheater of movieTheaters) { %>
-                <option value="<%= movieTheater.branchCode %>"
-                    <% if (movieTheater.branchCode === forms.containedInPlace.branchCode) { %> selected<% } %>>
-                    <%= movieTheater.name.ja %>
-                </option>
-                <% } %>
-            </select>
-            <input type="hidden" name="containedInPlace[branchCode]" value="<%= forms.containedInPlace.branchCode %>">
-            <% } %>
+        <ul class="nav nav-pills nav-pills-primary" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" data-toggle="tab" href="#link1" role="tablist">
+                    基本設定
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#link2" role="tablist">
+                    追加特性
+                </a>
+            </li>
+        </ul>
 
-        </div>
+        <div class="tab-content">
+            <div class="tab-pane active show" id="link1">
+                <div class="form-group bmd-form-group">
+                    <label for="containedInPlace[branchCode]" class="bmd-label-static">
+                        劇場
+                    </label>
+                    <% if (isNew) { %>
+                    <select class="form-control" name="containedInPlace[branchCode]">
+                        <option value="">選択してください</option>
+                        <% for (const movieTheater of movieTheaters) { %>
+                        <option value="<%= movieTheater.branchCode %>">
+                            <%= movieTheater.name.ja %>
+                        </option>
+                        <% } %>
+                    </select>
+                    <% } else { %>
+                    <select class="form-control" disabled>
+                        <% for (const movieTheater of movieTheaters) { %>
+                        <option value="<%= movieTheater.branchCode %>"
+                            <% if (movieTheater.branchCode === forms.containedInPlace.branchCode) { %> selected<% } %>>
+                            <%= movieTheater.name.ja %>
+                        </option>
+                        <% } %>
+                    </select>
+                    <input type="hidden" name="containedInPlace[branchCode]"
+                        value="<%= forms.containedInPlace.branchCode %>">
+                    <% } %>
 
-        <div class="form-group bmd-form-group">
-            <label class="bmd-label-static">
-                枝番号
-            </label>
-            <% if (isNew) { %>
-            <input type="text" class="form-control" name="branchCode" id="branchCode" placeholder="" maxlength=64
-                value="<%= forms.branchCode %>">
-            <span class="bmd-help">半角64文字以内でご入力ください</span>
-            <p class="error message text-danger">
-                <% if (errors && errors.branchCode) { %>
-                <%- errors.branchCode.msg %>
-                <% } %>
-            </p>
-            <% } else { %>
-            <input disabled type="text" class="form-control" value="<%= forms.branchCode %>">
-            <input type="hidden" name="branchCode" value="<%= forms.branchCode %>">
-            <% } %>
+                </div>
 
-        </div>
+                <div class="form-group bmd-form-group">
+                    <label class="bmd-label-static">
+                        枝番号
+                    </label>
+                    <% if (isNew) { %>
+                    <input type="text" class="form-control" name="branchCode" id="branchCode" placeholder=""
+                        maxlength=64 value="<%= forms.branchCode %>">
+                    <span class="bmd-help">半角64文字以内でご入力ください</span>
+                    <p class="error message text-danger">
+                        <% if (errors && errors.branchCode) { %>
+                        <%- errors.branchCode.msg %>
+                        <% } %>
+                    </p>
+                    <% } else { %>
+                    <input disabled type="text" class="form-control" value="<%= forms.branchCode %>">
+                    <input type="hidden" name="branchCode" value="<%= forms.branchCode %>">
+                    <% } %>
 
-        <div class="form-group bmd-form-group">
-            <label for="name[ja]" class="bmd-label-static">
-                名称<span class="text-danger">＊</span>
-            </label>
-            <input class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64
-                value="<%= (forms.name !== undefined && forms.name !== null) ? forms.name.ja : '' %>">
-            <span class="bmd-help">全角64文字以内でご入力ください</span>
-            <p class="error message text-danger">
-                <% if (errors && errors['name.ja']) { %>
-                <%- errors['name.ja'].msg %>
-                <% } %>
-            </p>
-        </div>
+                </div>
 
-        <div class="form-group">
-            <label for="name[en]" class="bmd-label-static">
-                名称(English)
-            </label>
-            <input class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64
-                value="<%= (forms.name !== undefined && forms.name !== null) ? forms.name.en : '' %>">
-            <span class="bmd-help">全角64文字以内でご入力ください</span>
-            <p class="error message text-danger">
-                <% if (errors && errors['name.en']) { %>
-                <%- errors['name.en'].msg %>
-                <% } %>
-            </p>
-        </div>
+                <div class="form-group bmd-form-group">
+                    <label for="name[ja]" class="bmd-label-static">
+                        名称<span class="text-danger">＊</span>
+                    </label>
+                    <input class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64
+                        value="<%= (forms.name !== undefined && forms.name !== null) ? forms.name.ja : '' %>">
+                    <span class="bmd-help">全角64文字以内でご入力ください</span>
+                    <p class="error message text-danger">
+                        <% if (errors && errors['name.ja']) { %>
+                        <%- errors['name.ja'].msg %>
+                        <% } %>
+                    </p>
+                </div>
 
-        <div class="form-group bmd-form-group">
-            <label for="address[ja]" class="bmd-label-static">
-                アドレス
-            </label>
-            <input class="form-control" name="address[ja]" id="address[ja]" placeholder="" maxlength=64
-                value="<%= (forms.address !== undefined && forms.address !== null) ? forms.address.ja : '' %>">
-            <span class="bmd-help">全角64文字以内でご入力ください</span>
-            <p class="error message text-danger">
-                <% if (errors && errors['address.ja']) { %>
-                <%- errors['address.ja'].msg %>
-                <% } %>
-            </p>
-        </div>
+                <div class="form-group">
+                    <label for="name[en]" class="bmd-label-static">
+                        名称(English)
+                    </label>
+                    <input class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64
+                        value="<%= (forms.name !== undefined && forms.name !== null) ? forms.name.en : '' %>">
+                    <span class="bmd-help">全角64文字以内でご入力ください</span>
+                    <p class="error message text-danger">
+                        <% if (errors && errors['name.en']) { %>
+                        <%- errors['name.en'].msg %>
+                        <% } %>
+                    </p>
+                </div>
 
-        <div class="form-group">
-            <label for="address[en]" class="bmd-label-static">
-                アドレス(English)
-            </label>
-            <input class="form-control" name="address[en]" id="naaddressme[en]" placeholder="" maxlength=64
-                value="<%= (forms.address !== undefined && forms.address !== null) ? forms.address.en : '' %>">
-            <span class="bmd-help">全角64文字以内でご入力ください</span>
-            <p class="error message text-danger">
-                <% if (errors && errors['address.en']) { %>
-                <%- errors['address.en'].msg %>
-                <% } %>
-            </p>
-        </div>
+                <div class="form-group bmd-form-group">
+                    <label for="address[ja]" class="bmd-label-static">
+                        アドレス
+                    </label>
+                    <input class="form-control" name="address[ja]" id="address[ja]" placeholder="" maxlength=64
+                        value="<%= (forms.address !== undefined && forms.address !== null) ? forms.address.ja : '' %>">
+                    <span class="bmd-help">全角64文字以内でご入力ください</span>
+                    <p class="error message text-danger">
+                        <% if (errors && errors['address.ja']) { %>
+                        <%- errors['address.ja'].msg %>
+                        <% } %>
+                    </p>
+                </div>
 
-        <div class="form-group bmd-form-group">
-            <label for="" class="bmd-label-static">
-                自由席対応
-            </label>
-            <div class="form-check form-check-inline">
-                <label class="form-check-label">
-                    <input class="form-check-input" type="checkbox" <% if (forms.openSeatingAllowed) { %>
-                        checked="checked" <% } %> value="1" name="openSeatingAllowed">自由席対応
-                    <span class="form-check-sign">
-                        <span class="check"></span>
-                    </span>
-                </label>
+                <div class="form-group">
+                    <label for="address[en]" class="bmd-label-static">
+                        アドレス(English)
+                    </label>
+                    <input class="form-control" name="address[en]" id="naaddressme[en]" placeholder="" maxlength=64
+                        value="<%= (forms.address !== undefined && forms.address !== null) ? forms.address.en : '' %>">
+                    <span class="bmd-help">全角64文字以内でご入力ください</span>
+                    <p class="error message text-danger">
+                        <% if (errors && errors['address.en']) { %>
+                        <%- errors['address.en'].msg %>
+                        <% } %>
+                    </p>
+                </div>
+
+                <div class="form-group bmd-form-group">
+                    <label for="" class="bmd-label-static">
+                        自由席対応
+                    </label>
+                    <div class="form-check form-check-inline">
+                        <label class="form-check-label">
+                            <input class="form-check-input" type="checkbox" <% if (forms.openSeatingAllowed) { %>
+                                checked="checked" <% } %> value="1" name="openSeatingAllowed">自由席対応
+                            <span class="form-check-sign">
+                                <span class="check"></span>
+                            </span>
+                        </label>
+                    </div>
+                    <p class="error message text-danger">
+                    </p>
+                </div>
             </div>
-            <p class="error message text-danger">
-            </p>
+            <div class="tab-pane" id="link2">
+                <%- include('../../common/part/_additionalProperty', {
+                    additionalProperty: forms.additionalProperty
+                }) %>
+            </div>
         </div>
-    </div>
-</div>
-<!-- end card -->
-
-<div class="card">
-    <div class="card-header card-header-primary card-header-text">
-        <div class="card-text">
-            <h4 class="card-title">追加特性</h4>
-        </div>
-    </div>
-    <div class="card-body">
-        <%- include('../../common/part/_additionalProperty', {
-            additionalProperty: forms.additionalProperty
-        }) %>
     </div>
 </div>
 <!-- end card -->
