--- a/views/products/form.ejs
+++ b/views/products/form.ejs
@@ -1,44 +1,54 @@
 <div class="card">
-    <div class="card-header card-header-primary card-header-text">
-        <div class="card-text">
-            <h4 class="card-title">基本設定</h4>
-        </div>
-    </div>
-
     <div class="card-body">
-        <input type="hidden" name="id" value="<%= forms.id %>">
+        <ul class="nav nav-pills nav-pills-primary" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" data-toggle="tab" href="#link1" role="tablist">
+                    基本設定
+                </a>
+            </li>
+        </ul>
 
-        <div class="form-row">
-            <div class="form-group bmd-form-group col-md-6">
-                <label for="name[ja]" class="bmd-label-static">
-                    名称<span class="text-danger">＊</span>
-                </label>
-                <input type="text" class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=30
-                    value=<%= (forms.name !== undefined && forms.name !== null) ? forms.name.ja : '' %>>
-                <span class="bmd-help">30文字以内でご入力ください</span>
-                <span class="bmd-help text-danger d-block">
-                    <% if (errors && errors['name.ja']) { %>
-                    <%- errors['name.ja'].msg %>
-                    <% } %>
-                </span>
+        <div class="tab-content">
+            <div class="tab-pane active show" id="link1">
+                <input type="hidden" name="id" value="<%= forms.id %>">
+
+                <div class="form-row">
+                    <div class="form-group bmd-form-group col-md-6">
+                        <label for="name[ja]" class="bmd-label-static">
+                            名称<span class="text-danger">＊</span>
+                        </label>
+                        <input type="text" class="form-control" name="name[ja]" id="name[ja]" placeholder=""
+                            maxlength=30
+                            value=<%= (forms.name !== undefined && forms.name !== null) ? forms.name.ja : '' %>>
+                        <span class="bmd-help">30文字以内でご入力ください</span>
+                        <span class="bmd-help text-danger d-block">
+                            <% if (errors && errors['name.ja']) { %>
+                            <%- errors['name.ja'].msg %>
+                            <% } %>
+                        </span>
+                    </div>
+
+                    <div class="form-group bmd-form-group col-md-6">
+                        <label for="hasOfferCatalog[id]" class="bmd-label-static">
+                            オファーカタログ
+                        </label>
+                        <select class="form-control" name="hasOfferCatalog[id]">
+                            <option value="">選択してください</option>
+                            <% for (const offerCatalog of offerCatalogs) { %>
+                            <option value="<%= offerCatalog.id %>"
+                                <% if (forms.hasOfferCatalog !== undefined && forms.hasOfferCatalog.id === offerCatalog.id) { %>
+                                selected<% } %>>
+                                <%= offerCatalog.name.ja %>
+                            </option>
+                            <% } %>
+                        </select>
+                    </div>
+                </div>
             </div>
-
-            <div class="form-group bmd-form-group col-md-6">
-                <label for="hasOfferCatalog[id]" class="bmd-label-static">
-                    オファーカタログ
-                </label>
-                <select class="form-control" name="hasOfferCatalog[id]">
-                    <option value="">選択してください</option>
-                    <% for (const offerCatalog of offerCatalogs) { %>
-                    <option value="<%= offerCatalog.id %>"
-                        <% if (forms.hasOfferCatalog !== undefined && forms.hasOfferCatalog.id === offerCatalog.id) { %>
-                        selected<% } %>>
-                        <%= offerCatalog.name.ja %>
-                    </option>
-                    <% } %>
-                </select>
+            <div class="tab-pane" id="link2">
             </div>
         </div>
+
     </div>
 </div>
 <!-- end card -->
