--- a/public/scss/_common.scss
+++ b/public/scss/_common.scss
@@ -223,7 +223,7 @@ body {
 }
 .card {
     .material-datatables {
-        margin-top: 1rem;
+        // margin-top: 1rem;
     }
 }
 .input-group-text {
