--- a/views/creativeWorks/movie/form.ejs
+++ b/views/creativeWorks/movie/form.ejs
@@ -1,5 +1,9 @@
 <div class="card">
     <div class="card-body ">
+        <div class="toolbar">
+            <!--        Here you can write extra buttons/actions for the toolbar              -->
+        </div>
+
         <ul class="nav nav-pills nav-pills-primary" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" data-toggle="tab" href="#link1" role="tablist">
