--- a/views/accountTitles/accountTitleCategory/form.ejs
+++ b/views/accountTitles/accountTitleCategory/form.ejs
@@ -1,14 +1,13 @@
 <div class="card">
     <div class="card-body">
+        <div class="toolbar">
+            <!--        Here you can write extra buttons/actions for the toolbar              -->
+        </div>
+
         <ul class="nav nav-pills nav-pills-primary" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" data-toggle="tab" href="#link1" role="tablist">
                     基本設定
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#link2" role="tablist">
-                    追加特性
                 </a>
             </li>
         </ul>
