--- a/views/offers/form.ejs
+++ b/views/offers/form.ejs
@@ -5,6 +5,10 @@
         </div>
     </div>
     <div class="card-body">
+        <div class="toolbar">
+            <!--        Here you can write extra buttons/actions for the toolbar              -->
+        </div>
+
         <div class="form-row">
             <div class="form-group bmd-form-group col-md-3">
                 <label for="identifier" class="bmd-label-static">
