--- a/views/categoryCodes/form.ejs
+++ b/views/categoryCodes/form.ejs
@@ -14,58 +14,63 @@
 
         <div class="tab-content">
             <div class="tab-pane active show" id="link1">
-                <div class="form-group bmd-form-group">
-                    <label for="inCodeSet[identifier]" class="bmd-label-static">
-                        区分分類<span class="text-danger">＊</span>
-                    </label>
-                    <% if (!isNew) { %>
-                    <input type="hidden" name="inCodeSet[identifier]" value="<%= forms.inCodeSet.identifier %>">
-                    <% } %>
-                    <select class="form-control" name="inCodeSet[identifier]" <% if (!isNew) { %> disabled<% } %>>
-                        <option value="">選択してください</option>
-                        <% categoryCodeSets.forEach((categoryCodeSet) => { %>
-                        <option value="<%= categoryCodeSet.identifier %>" <% if (forms.inCodeSet !== undefined
+                <div class="form-row">
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label for="inCodeSet[identifier]" class="bmd-label-static">
+                            区分分類<span class="text-danger">＊</span>
+                        </label>
+                        <% if (!isNew) { %>
+                        <input type="hidden" name="inCodeSet[identifier]" value="<%= forms.inCodeSet.identifier %>">
+                        <% } %>
+                        <select class="form-control" name="inCodeSet[identifier]" <% if (!isNew) { %> disabled<% } %>>
+                            <option value="">選択してください</option>
+                            <% categoryCodeSets.forEach((categoryCodeSet) => { %>
+                            <option value="<%= categoryCodeSet.identifier %>" <% if (forms.inCodeSet !== undefined
                             && forms.inCodeSet.identifier === categoryCodeSet.identifier) { %> selected<% } %>>
-                            <%= categoryCodeSet.name %>
-                        </option>
-                        <% }) %>
-                    </select>
-                    <span class="bmd-help text-danger d-block">
+                                <%= categoryCodeSet.name %>
+                            </option>
+                            <% }) %>
+                        </select>
                         <% if (errors && errors['inCodeSet.identifier']) { %>
-                        <%- errors['inCodeSet.identifier'].msg %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['inCodeSet.identifier'].msg %>
+                        </span>
                         <% } %>
-                    </span>
-                </div>
+                    </div>
 
-                <div class="form-group bmd-form-group">
-                    <label for="codeValue" class="bmd-label-static">
-                        コード<span class="text-danger">＊</span>
-                    </label>
-                    <% if (!isNew) { %>
-                    <input type="hidden" name="codeValue" value="<%= forms.codeValue %>">
-                    <% } %>
-                    <input type="text" class="form-control" name="codeValue" id="codeValue" placeholder="" maxlength=20
-                        value="<%= forms.codeValue %>" <% if (!isNew) { %> disabled<% } %>>
-                    <span class="bmd-help">半角20文字以内でご入力ください</span>
-                    <span class="bmd-help text-danger d-block">
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label for="codeValue" class="bmd-label-static">
+                            コード<span class="text-danger">＊</span>
+                        </label>
+                        <% if (!isNew) { %>
+                        <input type="hidden" name="codeValue" value="<%= forms.codeValue %>">
+                        <% } %>
+                        <input type="text" class="form-control" name="codeValue" id="codeValue" placeholder=""
+                            maxlength=20 value="<%= forms.codeValue %>" <% if (!isNew) { %> disabled<% } %>>
+                        <span class="bmd-help">半角20文字以内でご入力ください</span>
                         <% if (errors && errors.codeValue) { %>
-                        <%- errors.codeValue.msg %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors.codeValue.msg %>
+                        </span>
                         <% } %>
-                    </span>
+                    </div>
                 </div>
 
-                <div class="form-group bmd-form-group">
-                    <label for="name[ja]" class="bmd-label-static">
-                        名称<span class="text-danger">＊</span>
-                    </label>
-                    <input type="text" class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=30
-                        value=<%= (forms.name !== undefined && forms.name !== null) ? forms.name.ja : '' %>>
-                    <span class="bmd-help">30文字以内でご入力ください</span>
-                    <span class="bmd-help text-danger d-block">
+                <div class="form-row">
+                    <div class="form-group bmd-form-group col-md-6">
+                        <label for="name[ja]" class="bmd-label-static">
+                            名称<span class="text-danger">＊</span>
+                        </label>
+                        <input type="text" class="form-control" name="name[ja]" id="name[ja]" placeholder=""
+                            maxlength=30
+                            value=<%= (forms.name !== undefined && forms.name !== null) ? forms.name.ja : '' %>>
+                        <span class="bmd-help">30文字以内でご入力ください</span>
                         <% if (errors && errors['name.ja']) { %>
-                        <%- errors['name.ja'].msg %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['name.ja'].msg %>
+                        </span>
                         <% } %>
-                    </span>
+                    </div>
                 </div>
             </div>
             <div class="tab-pane" id="link2">
