--- a/views/places/screeningRoom/form.ejs
+++ b/views/places/screeningRoom/form.ejs
@@ -19,52 +19,55 @@
 
         <div class="tab-content">
             <div class="tab-pane active show" id="link1">
-                <div class="form-group bmd-form-group">
-                    <label for="containedInPlace[branchCode]" class="bmd-label-static">
-                        劇場
-                    </label>
-                    <% if (isNew) { %>
-                    <select class="form-control" name="containedInPlace[branchCode]">
-                        <option value="">選択してください</option>
-                        <% for (const movieTheater of movieTheaters) { %>
-                        <option value="<%= movieTheater.branchCode %>">
-                            <%= movieTheater.name.ja %>
-                        </option>
+                <div class="form-row">
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label for="containedInPlace[branchCode]" class="bmd-label-static">
+                            劇場
+                        </label>
+                        <% if (isNew) { %>
+                        <select class="form-control" name="containedInPlace[branchCode]">
+                            <option value="">選択してください</option>
+                            <% for (const movieTheater of movieTheaters) { %>
+                            <option value="<%= movieTheater.branchCode %>">
+                                <%= movieTheater.name.ja %>
+                            </option>
+                            <% } %>
+                        </select>
+                        <% } else { %>
+                        <select class="form-control" disabled>
+                            <% for (const movieTheater of movieTheaters) { %>
+                            <option value="<%= movieTheater.branchCode %>"
+                                <% if (movieTheater.branchCode === forms.containedInPlace.branchCode) { %>
+                                selected<% } %>>
+                                <%= movieTheater.name.ja %>
+                            </option>
+                            <% } %>
+                        </select>
+                        <input type="hidden" name="containedInPlace[branchCode]"
+                            value="<%= forms.containedInPlace.branchCode %>">
                         <% } %>
-                    </select>
-                    <% } else { %>
-                    <select class="form-control" disabled>
-                        <% for (const movieTheater of movieTheaters) { %>
-                        <option value="<%= movieTheater.branchCode %>"
-                            <% if (movieTheater.branchCode === forms.containedInPlace.branchCode) { %> selected<% } %>>
-                            <%= movieTheater.name.ja %>
-                        </option>
-                        <% } %>
-                    </select>
-                    <input type="hidden" name="containedInPlace[branchCode]"
-                        value="<%= forms.containedInPlace.branchCode %>">
-                    <% } %>
 
-                </div>
+                    </div>
 
-                <div class="form-group bmd-form-group">
-                    <label class="bmd-label-static">
-                        枝番号
-                    </label>
-                    <% if (isNew) { %>
-                    <input type="text" class="form-control" name="branchCode" id="branchCode" placeholder=""
-                        maxlength=64 value="<%= forms.branchCode %>">
-                    <span class="bmd-help">半角64文字以内でご入力ください</span>
-                    <p class="error message text-danger">
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label class="bmd-label-static">
+                            枝番号
+                        </label>
+                        <% if (isNew) { %>
+                        <input type="text" class="form-control" name="branchCode" id="branchCode" placeholder=""
+                            maxlength=64 value="<%= forms.branchCode %>">
+                        <span class="bmd-help">半角64文字以内でご入力ください</span>
                         <% if (errors && errors.branchCode) { %>
-                        <%- errors.branchCode.msg %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors.branchCode.msg %>
+                        </span>
                         <% } %>
-                    </p>
-                    <% } else { %>
-                    <input disabled type="text" class="form-control" value="<%= forms.branchCode %>">
-                    <input type="hidden" name="branchCode" value="<%= forms.branchCode %>">
-                    <% } %>
+                        <% } else { %>
+                        <input disabled type="text" class="form-control" value="<%= forms.branchCode %>">
+                        <input type="hidden" name="branchCode" value="<%= forms.branchCode %>">
+                        <% } %>
 
+                    </div>
                 </div>
 
                 <div class="form-group bmd-form-group">
@@ -74,11 +77,11 @@
                     <input class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64
                         value="<%= (forms.name !== undefined && forms.name !== null) ? forms.name.ja : '' %>">
                     <span class="bmd-help">全角64文字以内でご入力ください</span>
-                    <p class="error message text-danger">
-                        <% if (errors && errors['name.ja']) { %>
+                    <% if (errors && errors['name.ja']) { %>
+                    <span class="bmd-help text-danger d-block">
                         <%- errors['name.ja'].msg %>
-                        <% } %>
-                    </p>
+                    </span>
+                    <% } %>
                 </div>
 
                 <div class="form-group">
@@ -88,11 +91,11 @@
                     <input class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64
                         value="<%= (forms.name !== undefined && forms.name !== null) ? forms.name.en : '' %>">
                     <span class="bmd-help">全角64文字以内でご入力ください</span>
-                    <p class="error message text-danger">
-                        <% if (errors && errors['name.en']) { %>
+                    <% if (errors && errors['name.en']) { %>
+                    <span class="bmd-help text-danger d-block">
                         <%- errors['name.en'].msg %>
-                        <% } %>
-                    </p>
+                    </span>
+                    <% } %>
                 </div>
 
                 <div class="form-group bmd-form-group">
@@ -102,11 +105,11 @@
                     <input class="form-control" name="address[ja]" id="address[ja]" placeholder="" maxlength=64
                         value="<%= (forms.address !== undefined && forms.address !== null) ? forms.address.ja : '' %>">
                     <span class="bmd-help">全角64文字以内でご入力ください</span>
-                    <p class="error message text-danger">
-                        <% if (errors && errors['address.ja']) { %>
+                    <% if (errors && errors['address.ja']) { %>
+                    <span class="bmd-help text-danger d-block">
                         <%- errors['address.ja'].msg %>
-                        <% } %>
-                    </p>
+                    </span>
+                    <% } %>
                 </div>
 
                 <div class="form-group">
@@ -116,11 +119,11 @@
                     <input class="form-control" name="address[en]" id="naaddressme[en]" placeholder="" maxlength=64
                         value="<%= (forms.address !== undefined && forms.address !== null) ? forms.address.en : '' %>">
                     <span class="bmd-help">全角64文字以内でご入力ください</span>
-                    <p class="error message text-danger">
-                        <% if (errors && errors['address.en']) { %>
+                    <% if (errors && errors['address.en']) { %>
+                    <span class="bmd-help text-danger d-block">
                         <%- errors['address.en'].msg %>
-                        <% } %>
-                    </p>
+                    </span>
+                    <% } %>
                 </div>
 
                 <div class="form-group bmd-form-group">
@@ -136,8 +139,6 @@
                             </span>
                         </label>
                     </div>
-                    <p class="error message text-danger">
-                    </p>
                 </div>
             </div>
             <div class="tab-pane" id="link2">
