--- a/views/places/seat/form.ejs
+++ b/views/places/seat/form.ejs
@@ -19,72 +19,77 @@
 
         <div class="tab-content">
             <div class="tab-pane active show" id="link1">
-                <div class="form-group bmd-form-group">
-                    <label for="containedInPlace[branchCode]" class="bmd-label-static">
-                        劇場
-                    </label>
-                    <% if (isNew) { %>
-                    <select class="form-control" name="containedInPlace[branchCode]">
-                        <option value="">選択してください</option>
-                        <% for (const movieTheater of movieTheaters) { %>
-                        <option value="<%= movieTheater.branchCode %>">
-                            <%= movieTheater.name.ja %>
-                        </option>
-                        <% } %>
-                    </select>
-                    <% } else { %>
-                    <select class="form-control" disabled>
-                        <% for (const movieTheater of movieTheaters) { %>
-                        <option value="<%= movieTheater.branchCode %>"
-                            <% if (movieTheater.branchCode === forms.containedInPlace.containedInPlace.containedInPlace.branchCode) { %>
-                            selected<% } %>>
-                            <%= movieTheater.name.ja %>
-                        </option>
-                        <% } %>
-                    </select>
-                    <input type="hidden" name="containedInPlace[containedInPlace][containedInPlace][branchCode]"
-                        value="<%= forms.containedInPlace.containedInPlace.containedInPlace.branchCode %>">
-                    <% } %>
-                </div>
+                <div class="form-row">
+                    <input type="hidden" name="containedInPlace[containedInPlace][branchCode]"
+                        value="<%= forms.containedInPlace.containedInPlace.branchCode %>">
+                    <input type="hidden" name="containedInPlace[branchCode]"
+                        value="<%= forms.containedInPlace.branchCode %>">
 
-                <input type="hidden" name="containedInPlace[containedInPlace][branchCode]"
-                    value="<%= forms.containedInPlace.containedInPlace.branchCode %>">
-                <input type="hidden" name="containedInPlace[branchCode]"
-                    value="<%= forms.containedInPlace.branchCode %>">
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label for="containedInPlace[branchCode]" class="bmd-label-static">
+                            劇場
+                        </label>
+                        <% if (isNew) { %>
+                        <select class="form-control" name="containedInPlace[branchCode]">
+                            <option value="">選択してください</option>
+                            <% for (const movieTheater of movieTheaters) { %>
+                            <option value="<%= movieTheater.branchCode %>">
+                                <%= movieTheater.name.ja %>
+                            </option>
+                            <% } %>
+                        </select>
+                        <% } else { %>
+                        <select class="form-control" disabled>
+                            <% for (const movieTheater of movieTheaters) { %>
+                            <option value="<%= movieTheater.branchCode %>"
+                                <% if (movieTheater.branchCode === forms.containedInPlace.containedInPlace.containedInPlace.branchCode) { %>
+                                selected<% } %>>
+                                <%= movieTheater.name.ja %>
+                            </option>
+                            <% } %>
+                        </select>
+                        <input type="hidden" name="containedInPlace[containedInPlace][containedInPlace][branchCode]"
+                            value="<%= forms.containedInPlace.containedInPlace.containedInPlace.branchCode %>">
+                        <% } %>
+                    </div>
 
-                <div class="form-group bmd-form-group">
-                    <label class="bmd-label-static">
-                        枝番号
-                    </label>
-                    <% if (isNew) { %>
-                    <input type="text" class="form-control" name="branchCode" id="branchCode" placeholder=""
-                        maxlength=64 value="<%= forms.branchCode %>">
-                    <span class="bmd-help">半角64文字以内でご入力ください</span>
-                    <p class="error message text-danger">
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label class="bmd-label-static">
+                            枝番号
+                        </label>
+                        <% if (isNew) { %>
+                        <input type="text" class="form-control" name="branchCode" id="branchCode" placeholder=""
+                            maxlength=64 value="<%= forms.branchCode %>">
+                        <span class="bmd-help">半角64文字以内でご入力ください</span>
                         <% if (errors && errors.branchCode) { %>
-                        <%- errors.branchCode.msg %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors.branchCode.msg %>
+                        </span>
                         <% } %>
-                    </p>
-                    <% } else { %>
-                    <input disabled type="text" class="form-control" value="<%= forms.branchCode %>">
-                    <input type="hidden" name="branchCode" value="<%= forms.branchCode %>">
-                    <% } %>
+                        <% } else { %>
+                        <input disabled type="text" class="form-control" value="<%= forms.branchCode %>">
+                        <input type="hidden" name="branchCode" value="<%= forms.branchCode %>">
+                        <% } %>
+
+                    </div>
 
                 </div>
 
-                <div class="form-group bmd-form-group">
-                    <label for="seatingType" class="bmd-label-static">
-                        座席区分
-                    </label>
-                    <select class="form-control" name="seatingType">
-                        <option value="">---</option>
-                        <% for (const seatingType of seatingTypes) { %>
-                        <% const selected = Array.isArray(forms.seatingType) && forms.seatingType.includes(seatingType.codeValue) %>
-                        <option value="<%= seatingType.codeValue %>" <% if (selected) { %> selected<% } %>>
-                            <%= seatingType.name.ja %>
-                        </option>
-                        <% } %>
-                    </select>
+                <div class="form-row">
+                    <div class="form-group bmd-form-group col-md-2">
+                        <label for="seatingType" class="bmd-label-static">
+                            座席区分
+                        </label>
+                        <select class="form-control" name="seatingType">
+                            <option value="">---</option>
+                            <% for (const seatingType of seatingTypes) { %>
+                            <% const selected = Array.isArray(forms.seatingType) && forms.seatingType.includes(seatingType.codeValue) %>
+                            <option value="<%= seatingType.codeValue %>" <% if (selected) { %> selected<% } %>>
+                                <%= seatingType.name.ja %>
+                            </option>
+                            <% } %>
+                        </select>
+                    </div>
                 </div>
             </div>
             <div class="tab-pane" id="link2">
